--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,42 @@
 name: Build
 
+# Ver 4
 on: push
-
-#Ver 3
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Visual Studio 2019 Build Tools
-        uses: microsoft/setup-msbuild@v1.0.2
-        with:
-          vs-version: '16.0'
-      - name: Build with MSBuild
-        run: msbuild /p:Configuration=Release || exit 0
-        continue-on-error: true
-      - name: Wait for successful build status
-        uses: github-actions/wait-for-status@v1
-        with:
-          checks: 'Build' # имя проверки статуса сборки
-          timeout-minutes: 10 # время ожидания в минутах
-          ignore-issues: true # игнорировать проблемы в проверках статуса (например, недоступность статуса сборки)
+
+      #- name: Check codestyle
+      #  run: git ls-files *.{c,h} | xargs clang-format -i --verbose && git diff --exit-code
+
+      - name: Set up MSVC
+        uses: microsoft/setup-msvc@v1.0.2
+
+      - name: Build application
+        run: msbuild.exe /p:Configuration=Release /p:Platform=x64 MyProject.sln
+
+#Ver 3
+#jobs:
+#  build:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Visual Studio 2019 Build Tools
+#        uses: microsoft/setup-msbuild@v1.0.2
+#        with:
+#          vs-version: '16.0'
+#      - name: Build with MSBuild
+#        run: msbuild /p:Configuration=Release || exit 0
+#        continue-on-error: true
+#      - name: Wait for successful build status
+#        uses: github-actions/wait-for-status@v1 //тут ошибка
+#        with:
+#          checks: 'Build' # имя проверки статуса сборки
+#          timeout-minutes: 10 # время ожидания в минутах
+#          ignore-issues: true # игнорировать проблемы в проверках статуса (например, недоступность статуса сборки)
 
 #Ver 2
 #jobs:
