--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on: push
 #      #  run: git ls-files *.{c,h} | xargs clang-format -i --verbose && git diff --exit-code
 
 #      - name: Set up MSVC
-#        uses: microsoft/setup-msvc@v1.6.2
+#        uses: microsoft/setup-msvc@v1.0.2
 
 #      - name: Build
 #        run: |
@@ -32,12 +32,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Visual Studio 2022 Build Tools
-        uses: microsoft/setup-msbuild@v1.6.2
+        uses: microsoft/setup-msbuild@v1.0.2
         with:
           vs-version: '16.0'
       - name: Build with MSBuild
         run: msbuild /p:Configuration=Release || exit 0
         continue-on-error: true
+      - name: Wait for commit statuses
+        uses: WyriHaximus/github-action-wait-for-status@v1.7.0
+
       - name: Wait for successful build status
         uses: github-actions/wait-for-status@v1 //тут ошибка
         with:
