--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,16 +37,16 @@ jobs:
           vs-version: '16.0'
       - name: Build with MSBuild
         run: msbuild /p:Configuration=Release || exit 0
-        continue-on-error: true
-      - name: Wait for commit statuses
-        uses: WyriHaximus/github-action-wait-for-status@v1.7.0
+      #  continue-on-error: true
+      #- name: Wait for commit statuses
+      #  uses: WyriHaximus/github-action-wait-for-status@v1.7.0
 
-      - name: Wait for successful build status
-        uses: "WyriHaximus/github-action-wait-for-status@v1"
-        with:
-          checks: 'Build' # имя проверки статуса сборки
-          timeout-minutes: 10 # время ожидания в минутах
-          ignore-issues: true # игнорировать проблемы в проверках статуса (например, недоступность статуса сборки)
+      #- name: Wait for successful build status
+      #  uses: "WyriHaximus/github-action-wait-for-status@v1"
+      #  with:
+      #    checks: 'Build' # имя проверки статуса сборки
+      #    timeout-minutes: 10 # время ожидания в минутах
+      #    ignore-issues: true # игнорировать проблемы в проверках статуса (например, недоступность статуса сборки)
 
 #Ver 2
 #jobs:
