--- a/poject1.vcxproj
+++ b/poject1.vcxproj
@@ -120,6 +120,10 @@
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-audio-d.lib</AdditionalDependencies>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
+    <PreBuildEvent>
+      <Command>clang-format.exe -style=file -i $(ProjectDir)main.cpp
+clang-format.exe -style=file -i $(ProjectDir)\lib\func.cpp</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
