--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,11 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          repository: test/test.vcxproj
       - name: Set up Visual Studio 2022 Build Tools
         uses: microsoft/setup-msbuild@v1.0.2
         with:
           vs-version: '16.0'
       - name: Build with MSBuild
-        run: msbuild test.vcxproj/p:Configuration=Release || exit 0
+        run: msbuild /p:Configuration=Release || exit 0
