--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: test/test.vcxproj
+          : test/test.vcxproj
       - name: Set up Visual Studio 2022 Build Tools
         uses: microsoft/setup-msbuild@v1.0.2
         with:
           vs-version: '16.0'
       - name: Build with MSBuild
-        run: msbuild /p:Configuration=Release || exit 0
+        run: cd test && msbuild /p:Configuration=Release || exit 0
+      
