--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
         uses: microsoft/setup-msbuild@v1.0.2
         with:
           vs-version: '16.0'
-      - name: build with msbuild
-        run: msbuild /p:configuration=release || exit 0
+      #- name: build with msbuild
+      #  run: msbuild /p:configuration=release || exit 0
       - name: tests
+        working-directory: ./test/
         run: |  
-          working-directory: ./test/
           msbuild /p:configuration=release || exit 1
           .\x64\Debug\test.exe 
