--- a/poject1.vcxproj.filters
+++ b/poject1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="test\obj\For_test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="test\obj\test1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="openal32.dll" />
