--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="obj\main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="obj\assert1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
