--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="obj\func.cpp">
+    <ClCompile Include="lib\func.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="obj\test.cpp">
+    <ClCompile Include="lib\test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="obj\main.cpp">
+    <ClCompile Include="lib\main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="obj\assert1.cpp">
+    <ClCompile Include="lib\assert1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
