--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -26,11 +26,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="test.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="openal32.dll">
       <Filter>Файлы ресурсов</Filter>
     </None>
@@ -64,5 +59,10 @@
     <None Include="sfml-window-d-2.dll">
       <Filter>Файлы ресурсов</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lib\test.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
